<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shivam.mobilelearning1.A2c1_DashDiscoverActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_course_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/course_name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_course_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_course_duration"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/level"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_course_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_course_level"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_course_instructor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/instructor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_course_instructor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_course_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_course_name_title"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_course_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_course_duration"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_course_level"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_start_date"
                android:layout_marginTop="2dp"
                android:layout_toStartOf="@+id/text_course_name_title"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_start_date"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_end_date"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/course_enroll_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/enroll"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
